--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "ValidateURL" : "npx playwright test"
+    "ValidateURL": "npx playwright test"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "allure-playwright": "^3.2.0"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.6.0",
     "csv-parse": "^5.6.0",
     "moment": "^2.30.1",
     "typescript": "^5.8.2",
